tdf#93141 Calc/Impress: remove last colon of emoji short names

AutoCorrect Emoji replacements were incomplete in Calc cells and
Impress text boxes, keeping the terminating colon:

:omega: -> Ω:

Corrected by this patch:

:omega: -> Ω

Change-Id: I0d1f6f9ec9c31a7b37e0c9afaaad17dcee568dd5